2015-12-22 Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (precalc_multicolorinfo, alloc_multidata_if_needed):
	Move these two functions to the file where they belong.  And make
	the checking for an impatient user into a separate routine.

2015-12-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (display_buffer), src/nano.c (main): Precalculate the
	multiline-regex cache data for each buffer, not just for the first.
	This fixes Savannah bug #46511.

2015-12-18  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_init): Use less #ifdefs, and adjust indentation.
	* src/color.c (set_colorpairs): Improve comments and rename vars.
	* src/files.c (read_line): Chop a superfluous bool -- 'prevnode' being
	NULL is enough indication that the first line is being read.
	* src/files.c (switch_to_prevnext_buffer): Tweak comment and var name.

2015-12-11  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/Makefile.am: Add missing autoconf and nftables syntaxes.
	* ChangeLog: Correct a bug number, plus a few other tweaks.

2015-12-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (splice_node, unlink_node): Let these functions update
	'filebot', instead of doing it in four different places each.
	* src/search.c (goto_line_posx), src/move.c (do_down): It should not
	be necessary to doubly check for being at the end of file.
	* src/text.c (do_justify): Rewrap and reorder a few lines.

2015-12-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Quit the loop when there is no end match.
	* src/files.c (do_writeout): When --tempfile is given, make ^O not
	write out the file rightaway, as otherwise there is no way to discard
	the edits.  This undoes the core part of r5378 of September 29.  See
	https://lists.gnu.org/archive/html/help-nano/2015-11/msg00005.html.

GNU nano 2.5.0 - 2015.12.05

2015-12-05  Chris Allegretta <chrisa@asty.org>
	* src/nano.c (main): key_defined() is an ncurses-ism.  Add better